--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,29 @@
 .App {
-  text-align: center; }
-  .App-logo {
+  text-align: center;
+  &-logo {
     animation: App-logo-spin infinite 20s linear;
-    height: 80px; }
-  .App-header {
+    height: 80px;
+  }
+
+  &-header {
     background-color: #222;
     height: 50px;
     padding: 20px;
-    color: white; }
-  .App-title {
-    font-size: 1.5em; }
-  .App-intro {
-    font-size: large; }
+    color: white;
+  }
+
+  &-title {
+    font-size: 1.5em;
+  }
+
+  &-intro {
+    font-size: large;
+  }
+}
 
 .GridItem {
   background-color: #eeeeee;
   padding: 20px;
   border: 2px solid #222;
-  border-radius: 10px; }
+  border-radius: 10px;
+}
