--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
